fix : fix CI pipelines with updated enviroment
- update `readme.md`

- update enviroment file

- remove redudant env file

fix: update workflows

- remove coffea.hist

- correct DY workflows

feat: rename SFs name, issues for coffea

feat : add global flags to runner.py

fix: fix error with no correction case

feat : add corrections to workflow

- add correctiosn to workflow

- minor fix on parameters

--- a/.github/workflows/ctag_DY_workflow.yml
+++ b/.github/workflows/ctag_DY_workflow.yml
@@ -76,12 +76,10 @@ jobs:
       run: |
         pip install -e .
 
-    
-    - name: ctag DY muon workflows
+    - name: ctag muon DY workflows
       run: |
-        python runner.py --workflow ctag_DY_sf --json metadata/test_w_dj.json  --limit 1 --executor iterative
+        python runner.py --workflow ctag_DY_sf --json metadata/test_w_dj.json  --limit 1 --executor iterative --isCorr --isJERC
     
-    - name: ctag DY electron workflows
-        python runner.py --workflow ectag_DY_sf --json metadata/test_w_dj.json  --limit 1 --executor iterative
-    
-    
+    - name: ctag electron DY workflows
+      run: |
+        python runner.py --workflow ectag_DY_sf --json metadata/test_w_dj.json  --limit 1 --executor iterative --isCorr --isJERC
