--- a/.github/workflows/ctag_Wc_workflow.yml
+++ b/.github/workflows/ctag_Wc_workflow.yml
@@ -78,11 +78,11 @@ jobs:
 
     - name: ctag muon W+c workflows
       run: |
-        python runner.py --workflow ctag_Wc_sf --json metadata/test_w_dj.json  --limit 1 --executor iterative
+        python runner.py --workflow ctag_Wc_sf --json metadata/test_w_dj.json  --limit 1 --executor iterative --isCorr --isJERC
     
     - name: ctag electron W+c workflows
       run: |
-        python runner.py --workflow ectag_Wc_sf --json metadata/test_w_dj.json  --limit 1 --executor iterative
+        python runner.py --workflow ectag_Wc_sf --json metadata/test_w_dj.json  --limit 1 --executor iterative --isCorr --isJERC
     
     
     
